[gd_scene load_steps=4 format=2]

[ext_resource path="res://PickupEffect.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18.5, 17 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[node name="PickupEffect" type="KinematicBody2D" groups=["pickup"]]
collision_layer = 32
collision_mask = 0
script = ExtResource( 3 )
type = ""

[node name="Sprite" type="Sprite" parent="."]

[node name="PillBlue" type="Sprite" parent="Sprite"]
visible = false
scale = Vector2( 0.75, 0.75 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.75, 0 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -0.999998, -30 )
scale = Vector2( 1.275, 1.725 )

[node name="ExposedSprite" type="Sprite" parent="."]
visible = false

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1, 0 )
shape = SubResource( 2 )

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
